--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Caleb Martinez">
   <meta name="description" content="Caleb Martinez personal site :v">
   <meta name="keywords" content="web,dev,developer,programmer,caleb,martinez,professional">
-  <!--<link rel="stylesheet" href="//fonts.googleapis.com/css?family=font1|font2|etc" type="text/css">-->
+  <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <link rel="stylesheet" href="../static/css/main.css" type="text/css">
   </head>
   <body>
