--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,16 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <link rel="stylesheet" href="../static/css/main.css" type="text/css">
   </head>
+  <header>
+    <div id="header_bar">
+      <h1>Caleb Martinez</h1>
+      <div class="link-row">
+        <h2>About</h2>
+        <h2>Work</h2>
+        <h2>Contact</h2>
+      </div>
+    </div>
+  </header>
   <body>
     <div class="centerFloat">
         <p>I'm a fullstack developer.</p>
