--- a/html/index.html
+++ b/html/index.html
@@ -11,11 +11,11 @@
   </head>
   <header>
     <div id="header_bar">
-      <h1>Caleb Martinez</h1>
+      <h1><a href="" id="header_title">Caleb Martinez</a></h1>
       <div class="link-row">
-        <h2>About</h2>
-        <h2>Work</h2>
-        <h2>Contact</h2>
+        <h2><a href="about">About</a></h2>
+        <h2><a href="work">Work</a></h2>
+        <h2><a href="contact">Contact</a></h2>
       </div>
     </div>
   </header>
