Added barebone pages

--- a/html/work.html
+++ b/html/work.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>About</title>
+    <title>Work</title>
   <meta name="author" content="Caleb Martinez">
-  <meta name="description" content="About Caleb Martinez">
+  <meta name="description" content="Caleb Martinez' work">
   <meta name="keywords" content="web,dev,developer,programmer,caleb,martinez,professional">
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
   <link rel="stylesheet" href="../static/css/main.css" type="text/css">
   </head>
   <header>
     <div id="header_bar">
-      <h1><a href="/" id="header_title">Caleb Martinez</a></h1>
+      <h1><a href="" id="header_title">Caleb Martinez</a></h1>
       <div class="link-row">
         <h2><a href="about">About</a></h2>
         <h2><a href="work">Work</a></h2>
@@ -21,7 +21,7 @@
   </header>
   <body>
     <div class="centerFloat">
-        <p>This is an about page.</p>
+        <p>Some of my work is supposed to go here..</p>
         <p>This website is under construction.</p>
         <a href="http://pixeljoint.com/p/39255.htm"><img src="http://pixeljoint.com/files/icons/adad.gif"/></a>
   </body>
