--- a/html/work.html
+++ b/html/work.html
@@ -11,7 +11,7 @@
   </head>
   <header>
     <div id="header_bar">
-      <h1><a href="" id="header_title">Caleb Martinez</a></h1>
+      <h1><a href="/" id="header_title">Caleb Martinez</a></h1>
       <div class="link-row">
         <h2><a href="about">About</a></h2>
         <h2><a href="work">Work</a></h2>
