--- a/html/work.html
+++ b/html/work.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Caleb Martinez' work">
   <meta name="keywords" content="web,dev,developer,programmer,caleb,martinez,professional">
   <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-  <link rel="stylesheet" href="../static/css/main.css" type="text/css">
+  <link rel="stylesheet" href="../css/main.css" type="text/css">
   </head>
   <header>
     <div id="header_bar">
