add a link to hidden page since it's my newest project

--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,8 @@
     <div class="centerFloat">
         <p>I'm a fullstack developer.</p>
         <p>This website is under construction.</p>
+	<hr/>
+	<a href="https://hidden.page">a new thing.</a>
         <a href="http://pixeljoint.com/p/39255.htm"><img src="http://pixeljoint.com/files/icons/adad.gif"/></a>
   </body>
 </html>
